--- a/src/main/resources/properties/configuration.properties
+++ b/src/main/resources/properties/configuration.properties
@@ -8,6 +8,6 @@ configuration.profiles=web/desktop/chrome
 
 configuration.suites=demo
 
-# pick up environment related properties from 'saucedemo' environment folder:
+# pick up environment related properties from 'saucedemo_Ostanina' environment folder:
 
-configuration.environments=saucedemo
+configuration.environments=saucedemo_Ostanina
